--- a/about.html
+++ b/about.html
@@ -1,41 +1,27 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title> about aaliyah</title>
-    </head>
-    <body>
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Portfolio</title>
+<head>
+        <title>About Me</title>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
         <link rel="stylesheet" href="style.css" type="text/css" />
     </head>
     <body>
-        <div class="row footer">
+
+
+            <div class="row footer">
             <p>Aaliyah Weekes</p>
-            <a href="about.html">About me</a>
-            <p>Portfolio</p>
-            <p>Contact</p>
+            <a href="about.html">About Me</a>
+            <a href="portfoilo.html">Portfolio></a>
+            <a href="contact.html">Contact</a>
         </div>
-        <div class="row mid">
-            <h1>Aaliyah</h1>
-            <img class="headshot"src="IMG_3831.jpg">
-            <h1>Weekes</h1>
-        </div>
-        <div class="row aboutme">
-            <img src="https://s13.therealdeal.com/trd/up/2017/10/new-york-city-skyline-700x525.jpg">
-        </div>
+        <p>Hello there, my name is Aaliyah Weekes. I am a student from Acorn Community High School. The reason I got into coding is to have some experience in coding for the future cause who knows maybe i wanna be a computer programmer, haven't really decide yet. </p>
         <div class="row contact">
                 <p>Github: AaliyahWeekes</p>
         </div>
          <div class="row footer">
             <p>Copyright ©Aaliyah LLC 2018</p>
         </div>
-    </body>
-</html>
-
-
-
+    
+    
     </body>
 </html>
