--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <body>
         <div class="row footer">
             <p>Aaliyah Weekes</p>
-            <p>About Me</p>
-            <p>Portfolio</p>
-            <p>Contact</p>
+            <a href="about.html">About Me</a>
+            <a href="portfoilo.html">Portfolio></a>
+            <a href="contact.html">Contact</p>
         </div>
         <div class="row mid">
             <h1>Aaliyah</h1>
